# CMakeList.txt : CMake project for Code, include source and define
# project specific logic here.
#

# Add source to this project's executable.
# add_executable (Classes "classes.cpp")


add_executable (Classes "classes.cpp")
add_executable (Pointers "pointers.cpp")
add_executable (Arrays "arrays.cpp")
add_executable (Inheritance "inheritance.cpp")
add_executable (Operators "operators.cpp")
add_executable (Struct "struct.cpp")
add_executable (Enum "enum.cpp")
add_executable (RuleOfFive "rule_of_five.cpp")

# TODO: Add tests and install targets if needed.
